# knot-workspace

./: .gitignore  .gitmodules  Cargo.toml  README.md
amos/: .gitignore  Cargo.toml  README.md  amos_sample.txt  jffi.toml
amos/cli/: Cargo.toml
amos/cli/src/: main.rs
amos/core/: Cargo.toml  uniffi.toml
amos/core/src/: android.rs  engine.rs  lib.rs
amos/docs/: design_decisions.md  thoughts.md
iroh-knot/: Cargo.toml  README.md
iroh-knot/examples/: 01_p2p_host.rs  02_p2p_client.rs  03_command_client.rs  03_command_host.rs
iroh-knot/src/: lib.rs
iroh-knot/tests/: integration.rs
