[workspace]
members = [
    "knot-protocol",
    "iroh-knot",
    "amos/core",
    "amos/cli",
]
resolver = "2"

# Optimize all dependencies in dev mode to make external libraries run at release speed
[profile.dev.package."*"]
opt-level = 3

# Also optimize our own core crate in dev mode
[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
lto = true
