[package]
name = "iroh-knot"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]

[dependencies]
knot-protocol = { path = "../knot-protocol" }
iroh = "1.0"
tokio = { version = "1.52.1", features = ["full"] }
anyhow = "1.0"
base64 = "0.22.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1"
async-trait = "0.1"
