[package]
name = "amos-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "lib"]

[dependencies]
knot-protocol = { path = "../../knot-protocol" }
uniffi = { version = "0.31.1", features = ["wasm-unstable-single-threaded"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1"
anyhow = "1.0"
iroh = "1.0"
base64 = "0.22.1"
bincode = "1.3"
tokio-util = { version = "0.7", features = ["codec"] }
tokio = { version = "1.52.1", features = ["full"] }
futures-util = "0.3"
blake3 = "1.5"
redb = "2.1"
# Android ndk-context support (auto-added by JFFI)
[target.'cfg(target_os = "android")'.dependencies]
ndk-context = "0.1"
jni = "0.21"